@@ -53,7 +53,28 @@
     <artifactId>commons-codec</artifactId>
     <version>1.15</version>
 </dependency>
-      
+<!-- file pdf -->
+     <!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itext7-core</artifactId>
+    <version>7.2.3</version>
+    <type>pom</type>
+</dependency>
     </dependencies>
     <name>quanlybanhang2</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
